<resources>
    <string name="action_countdown">倒计时</string>
    <string name="action_settings">设置</string>
    <string name="action_turning">音调</string>
    <string name="action_timer">倒计时</string>
    <string name="action_metronome">节拍器</string>
    <string name="toolbar_playrate_dlg_title">速率</string>
    <string name="toolbar_tracks_dlg_title">音轨</string>
    <string name="toolbar_turning_dlg_title">调弦音调</string>
    <string name="toolbar_view">设置</string>
    <string name="toolbar_countdown">倒计时</string>
    <string name="toolbar_countdown_enable">启用倒计时</string>
    <string name="toolbar_metronome">启用节奏器</string>
    <string name="menu_switch_orientation">切换屏幕方向</string>
    <string name="toolbar_fullscreen">切换全屏</string>
    <string name="global_error_message">未知错误</string>
    <string name="global_exit_confirm_message">确定要退出吗?</string>
    <string name="global_button_ok">确定</string>
    <string name="global_button_cancel">取消</string>
    <string name="global_button_clean">Clean</string>
    <string name="global_spinner_select_option">-- 选择 --</string>
    <string name="menu_tab_keyboard_toggle">Toggle Keyboard</string>
    <string name="menu_file">File</string>
    <string name="menu_file_new">New</string>
    <string name="menu_file_open">Open</string>
    <string name="menu_file_save">Save</string>
    <string name="menu_file_save_as">Save As</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_undo">Undo</string>
    <string name="menu_edit_redo">Redo</string>
    <string name="menu_edit_set_voice_1">Select Voice 1</string>
    <string name="menu_edit_set_voice_2">Select Voice 2</string>
    <string name="menu_view_channel_list">Instruments</string>
    <string name="toolbar_view_layout_show_score">ShowScore</string>
    <string name="toolbar_view_layout_show_chord_name">ShowChordName</string>
    <string name="toolbar_view_layout_show_chord_diagram">ShowChordDiagram</string>
    <string name="menu_transport">Player</string>
    <string name="menu_transport_play">Play</string>
    <string name="menu_transport_pause">Pause</string>
    <string name="menu_transport_stop">Stop</string>
    <string name="menu_caret">Caret</string>
    <string name="menu_caret_go_left">Go Left</string>
    <string name="menu_caret_go_right">Go Right</string>
    <string name="menu_caret_go_up">Go Up</string>
    <string name="menu_caret_go_down">Go Down</string>
    <string name="menu_composition">Composition</string>
    <string name="menu_composition_change_tempo">Change Tempo</string>
    <string name="menu_composition_change_clef">Change Clef</string>
    <string name="menu_composition_change_key_signature">Change Key Signature</string>
    <string name="menu_composition_change_time_signature">Change Time Signature</string>
    <string name="menu_composition_change_triplet_feel">Change Triplet Feel</string>
    <string name="menu_composition_repeat_open">Open Repeat</string>
    <string name="menu_composition_repeat_close">Close Repeat</string>
    <string name="menu_composition_repeat_alternative">Alternative Repeats</string>
    <string name="menu_composition_change_info">Properties</string>
    <string name="menu_track">Track</string>
    <string name="menu_track_go_first_track">Go First Track</string>
    <string name="menu_track_go_last_track">Go Last Track</string>
    <string name="menu_track_go_previous_track">Go Previous Track</string>
    <string name="menu_track_go_next_track">Go Next Track</string>
    <string name="menu_track_add">Add Track</string>
    <string name="menu_track_remove">Remove Track</string>
    <string name="menu_track_clone">Clone Track</string>
    <string name="menu_track_move_up">Move Track Up</string>
    <string name="menu_track_move_down">Move Track Down</string>
    <string name="menu_track_change_mute">Set Mute</string>
    <string name="menu_track_change_solo">Set Solo</string>
    <string name="menu_track_set_name">Track Name</string>
    <string name="menu_track_set_channel">Change Instrument</string>
    <string name="menu_track_change_tuning">Change Tuning</string>
    <string name="menu_measure">Measure</string>
    <string name="menu_measure_add">Add Measure</string>
    <string name="menu_measure_clean">Clean Measure</string>
    <string name="menu_measure_remove">Remove Measure</string>
    <string name="menu_measure_go_first_measure">Go First Measure</string>
    <string name="menu_measure_go_last_measure">Go Last Measure</string>
    <string name="menu_measure_go_previous_measure">Go Previous Measure</string>
    <string name="menu_measure_go_next_measure">Go Next Measure</string>
    <string name="menu_beat">Beat</string>
    <string name="menu_beat_change_tied_note">Set Tied Note</string>
    <string name="menu_beat_clean_beat">Clean Beat</string>
    <string name="menu_beat_decrement_note_semitone">Decrement Semitone</string>
    <string name="menu_beat_increment_note_semitone">Increment Semitone</string>
    <string name="menu_beat_delete_note_or_rest">Delete Note or Rest</string>
    <string name="menu_beat_insert_rest_beat">Insert Rest Beat</string>
    <string name="menu_beat_move_beats_left">Move Beats Left</string>
    <string name="menu_beat_move_beats_right">Move Beats Right</string>
    <string name="menu_beat_remove_unused_voice">Remove Unused Voice</string>
    <string name="menu_beat_set_voice_auto">Set Voice Auto</string>
    <string name="menu_beat_set_voice_down">Set Voice Down</string>
    <string name="menu_beat_set_voice_up">Set Voice Up</string>
    <string name="menu_beat_shift_note_down">Shift Note Down</string>
    <string name="menu_beat_shift_note_up">Shift Note Up</string>
    <string name="menu_beat_stroke">Up/Down Stroke</string>
    <string name="menu_beat_edit_text">Insert Text</string>
    <string name="menu_duration">Duration</string>
    <string name="menu_duration_whole">Whole</string>
    <string name="menu_duration_half">Half</string>
    <string name="menu_duration_quarter">Quarter</string>
    <string name="menu_duration_eighth">Eighth</string>
    <string name="menu_duration_sixteenth">Sixteenth</string>
    <string name="menu_duration_thirtysecond">Thirty Second</string>
    <string name="menu_duration_sixtyfourth">Sixty Fourth</string>
    <string name="menu_duration_dotted">Dotted</string>
    <string name="menu_duration_doubledotted">Double Dotted</string>
    <string name="menu_duration_division_type">Division Type</string>
    <string name="menu_duration_division_type_1">Normal</string>
    <string name="menu_duration_division_type_3">3</string>
    <string name="menu_duration_division_type_5">5</string>
    <string name="menu_duration_division_type_6">6</string>
    <string name="menu_duration_division_type_7">7</string>
    <string name="menu_duration_division_type_9">9</string>
    <string name="menu_duration_division_type_10">10</string>
    <string name="menu_duration_division_type_11">11</string>
    <string name="menu_duration_division_type_12">12</string>
    <string name="menu_duration_division_type_13">13</string>
    <string name="menu_velocity">Dynamic</string>
    <string name="menu_velocity_ppp">Piano Pianissimo</string>
    <string name="menu_velocity_pp">Pianissimo</string>
    <string name="menu_velocity_p">Piano</string>
    <string name="menu_velocity_mp">Mezzo Piano</string>
    <string name="tempo_dlg_tempo_label">Tempo:</string>
    <string name="tempo_dlg_options_apply_to_song">Apply this tempo in the whole song</string>
    <string name="tempo_dlg_options_apply_to_end">Apply this tempo to the end</string>
    <string name="tempo_dlg_options_apply_to_next_marker">Apply this tempo to the next tempo marker</string>
    <string name="triplet_feel_dlg_none">No Triplet Feel</string>
    <string name="triplet_feel_dlg_eighth">Triplet 8th</string>
    <string name="triplet_feel_dlg_sixteenth">Triplet 16th</string>
    <string name="triplet_feel_dlg_options_apply_to_end">Apply this triplet feel to the end</string>
    <string name="song_info_dlg_name_label">Name</string>
    <string name="song_info_dlg_artist_label">Artist</string>
    <string name="song_info_dlg_album_label">Album</string>
    <string name="song_info_dlg_author_label">Author</string>
    <string name="song_info_dlg_date_label">Date</string>
    <string name="song_info_dlg_copyright_label">Copyright</string>
    <string name="song_info_dlg_writer_label">Tab Creator</string>
    <string name="song_info_dlg_transcriber_label">Transcribed By</string>
    <string name="song_info_dlg_comments_label">Comments</string>
    <string name="measure_add_dlg_count_label">Add Count:</string>
    <string name="measure_add_dlg_options_before_position">Add before the current position</string>
    <string name="measure_add_dlg_options_after_position">Add after the current position</string>
    <string name="measure_add_dlg_options_at_end">Add at the end</string>
    <string name="trill_dlg_fret_label">Fret:</string>
    <string name="trill_dlg_duration_16">Sixteenth</string>
    <string name="trill_dlg_duration_32">Thirty Second</string>
    <string name="trill_dlg_duration_64">Sixty Fourth</string>
    <string name="grace_dlg_fret_label">Fret:</string>
    <string name="grace_dlg_dead_note_label">Dead Note</string>
    <string name="grace_dlg_position_label">Position</string>
    <string name="grace_dlg_position_before_beat">Before Beat</string>
    <string name="grace_dlg_position_on_beat">On Beat</string>
    <string name="grace_dlg_duration_label">Duration</string>
    <string name="grace_dlg_duration_16">Sixteenth</string>
    <string name="grace_dlg_duration_32">Thirty Second</string>
    <string name="grace_dlg_duration_64">Sixty Fourth</string>
    <string name="grace_dlg_dynamic_label">Dynamic</string>
    <string name="grace_dlg_dynamic_ppp">Piano Pianissimo</string>
    <string name="grace_dlg_dynamic_pp">Pianissimo</string>
    <string name="grace_dlg_dynamic_p">Piano</string>
    <string name="grace_dlg_dynamic_mp">Mezzo Piano</string>
    <string name="grace_dlg_dynamic_mf">Mezzo Forte</string>
    <string name="grace_dlg_dynamic_f">Forte</string>
    <string name="grace_dlg_dynamic_ff">Fortissimo</string>
    <string name="grace_dlg_dynamic_fff">Forte Fortissimo</string>
    <string name="grace_dlg_transition_label">Transition</string>
    <string name="grace_dlg_transition_none">None</string>
    <string name="grace_dlg_transition_bend">Bend</string>
    <string name="grace_dlg_transition_slide">Slide</string>
    <string name="grace_dlg_transition_hammer">Hammer</string>
    <string name="harmonic_dlg_type_nh">[N.H] Natural Harmonic</string>
    <string name="harmonic_dlg_type_ah">[A.H] Artificial Harmonic</string>
    <string name="harmonic_dlg_type_th">[T.H] Tapped Harmonic</string>
    <string name="harmonic_dlg_type_ph">[P.H] Pinch Harmonic</string>
    <string name="harmonic_dlg_type_sh">[S.H] Semi Harmonic</string>
    <string name="stroke_dlg_direction_label">Direction</string>
    <string name="stroke_dlg_duration_4">Quarter</string>
    <string name="stroke_dlg_duration_8">Eighth</string>
    <string name="stroke_dlg_duration_16">Sixteenth</string>
    <string name="stroke_dlg_duration_32">Thirty Second</string>
    <string name="stroke_dlg_duration_64">Sixty Fourth</string>
    <string name="channel_edit_dlg_name_label">Name</string>
    <string name="channel_edit_dlg_bank_label">Bank</string>
    <string name="channel_edit_dlg_program_label">Program</string>
    <string name="channel_edit_dlg_percussion_label">Percussion Channel</string>
    <string name="channel_edit_dlg_volume_label">Volume</string>
    <string name="channel_edit_dlg_balance_label">Balance</string>
    <string name="channel_edit_dlg_chorus_label">Chorus</string>
    <string name="channel_edit_dlg_reverb_label">Reverb</string>
    <string name="channel_edit_dlg_phaser_label">Phaser</string>
    <string name="channel_edit_dlg_tremolo_label">Tremolo</string>
</resources>