<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/channel_edit_dlg_name_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_name_label" />

        <EditText
            android:id="@+id/channel_edit_dlg_name_value"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:id="@+id/channel_edit_dlg_program_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_program_label" />

        <Spinner android:id="@+id/channel_edit_dlg_program_value" />

        <TextView
            android:id="@+id/channel_edit_dlg_bank_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_bank_label" />

        <Spinner android:id="@+id/channel_edit_dlg_bank_value" />

        <CheckBox
            android:id="@+id/channel_edit_dlg_percussion_value"
            android:text="@string/channel_edit_dlg_percussion_label" />

        <TextView
            android:id="@+id/channel_edit_dlg_volume_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_volume_label" />

        <SeekBar
            android:id="@+id/channel_edit_dlg_volume_value"

            android:max="127" />

        <TextView
            android:id="@+id/channel_edit_dlg_balance_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_balance_label" />

        <SeekBar
            android:id="@+id/channel_edit_dlg_balance_value"

            android:max="127" />

        <TextView
            android:id="@+id/channel_edit_dlg_reverb_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_reverb_label" />

        <SeekBar
            android:id="@+id/channel_edit_dlg_reverb_value"

            android:max="127" />

        <TextView
            android:id="@+id/channel_edit_dlg_chorus_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_chorus_label" />

        <SeekBar
            android:id="@+id/channel_edit_dlg_chorus_value"

            android:max="127" />

        <TextView
            android:id="@+id/channel_edit_dlg_phaser_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_phaser_label" />

        <SeekBar
            android:id="@+id/channel_edit_dlg_phaser_value"

            android:max="127" />

        <TextView
            android:id="@+id/channel_edit_dlg_tremolo_label"
            style="@style/TextViewLabel"

            android:text="@string/channel_edit_dlg_tremolo_label" />

        <SeekBar
            android:id="@+id/channel_edit_dlg_tremolo_value"

            android:max="127" />

    </LinearLayout>

</ScrollView>