<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RadioGroup android:id="@+id/harmonic_dlg_type_group">

            <RadioButton
                android:id="@+id/harmonic_dlg_type_nh"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harmonic_dlg_type_nh" />

            <RadioButton
                android:id="@+id/harmonic_dlg_type_ah"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harmonic_dlg_type_ah" />

            <RadioButton
                android:id="@+id/harmonic_dlg_type_th"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harmonic_dlg_type_th" />

            <RadioButton
                android:id="@+id/harmonic_dlg_type_ph"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harmonic_dlg_type_ph" />

            <RadioButton
                android:id="@+id/harmonic_dlg_type_sh"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/harmonic_dlg_type_sh" />

        </RadioGroup>


        <Spinner android:id="@+id/harmonic_dlg_data_value" />

    </LinearLayout>

</ScrollView>