<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/Dialog"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content">

        <RadioGroup android:id="@+id/triplet_feel_dlg_value">

            <RadioButton
                android:id="@+id/triplet_feel_dlg_none"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triplet_feel_dlg_none" />

            <RadioButton
                android:id="@+id/triplet_feel_dlg_eighth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triplet_feel_dlg_eighth" />

            <RadioButton
                android:id="@+id/triplet_feel_dlg_sixteenth"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/triplet_feel_dlg_sixteenth" />
        </RadioGroup>
        
        <CheckBox
            android:id="@+id/triplet_feel_dlg_options_apply_to_end"
            android:text="@string/triplet_feel_dlg_options_apply_to_end" />

    </LinearLayout>

</ScrollView>