<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/Dialog"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tempo_dlg_tempo_label"
            style="@style/TextViewLabel"

            android:text="@string/tempo_dlg_tempo_label" />

        <Spinner android:id="@+id/tempo_dlg_tempo_value" />


        <RadioGroup android:id="@+id/tempo_dlg_options_group">

            <RadioButton
                android:id="@+id/tempo_dlg_options_apply_to_song"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempo_dlg_options_apply_to_song" />

            <RadioButton
                android:id="@+id/tempo_dlg_options_apply_to_end"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempo_dlg_options_apply_to_end" />

            <RadioButton
                android:id="@+id/tempo_dlg_options_apply_to_next_marker"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempo_dlg_options_apply_to_next_marker" />
        </RadioGroup>

    </LinearLayout>

</ScrollView>