<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/trill_dlg_fret_label"
            style="@style/TextViewLabel"

            android:text="@string/trill_dlg_fret_label" />

        <Spinner android:id="@+id/trill_dlg_fret_value" />


        <RadioGroup android:id="@+id/trill_dlg_duration_group">

            <RadioButton
                android:id="@+id/trill_dlg_duration_16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/duration_16"
                android:text="@string/trill_dlg_duration_16" />

            <RadioButton
                android:id="@+id/trill_dlg_duration_32"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/duration_32"
                android:text="@string/trill_dlg_duration_32" />

            <RadioButton
                android:id="@+id/trill_dlg_duration_64"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/duration_64"
                android:text="@string/trill_dlg_duration_64" />
        </RadioGroup>

    </LinearLayout>

</ScrollView>